--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,24 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
-  height: 100%;
+  position: fixed;
+  top:10%;
+  left: 20%;
+  height: 500px;
+  width:800px;
+
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background: rgb(26, 78, 44);
+}
+
+#submit,#location{
+  position: relative;
+  top:10%;
+  left: 20%;
+  margin: 0.5%;
 }
