--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,8 @@
       position: fixed;
       left:3%; 
        height: 500px;
-       width: 800px;
+       width: 60%;
+       border-radius: 20px;
         }
 
         /* Optional: Makes the sample page fill the window. */
@@ -13,7 +14,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background: darkgrey;
+            background: rgb(44, 43, 43);
         }
 
         #description {
@@ -99,28 +100,33 @@
 #right-panel {
 font-family: 'Roboto','sans-serif';
 line-height: 30px;
-padding-left: 10px;
-}
-
-#right-panel select, #right-panel input {
+/* padding-left: 10px; */
+width: 30%;
 font-size: 15px;
+margin-left: 5%;
+
 }
 
-#right-panel select {
+/* #right-panel select, #right-panel input {
+} */
+
+/* #right-panel select {
 width: 100%;
-}
+} */
 
 #right-panel i {
 font-size: 12px;
 }
 #right-panel {
     height: 500px;
-    float: right;
-    width: 350px;
+    /* float: right; */
+    /* width: 350px; */
     overflow: auto;
-    position: relative;
-    bottom: 75%;
-    right:2%;
+    background: lightgray;
+    border-radius: 20px;
+    /* position: relative; */
+    /* bottom: 75%; */
+    /* right:2%; */
 }
 
 @media print {
@@ -129,14 +135,17 @@ font-size: 12px;
     margin: 0;
   }
   #right-panel {
-    float: none;
-    width: auto;
+    /* float: none; */
+    /* width: auto; */
   }
 }
 
 #nearestFound{
-  position: relative;
-  left: 40%;
+  /* position: relative; */
+  /* margin: 0 30%; */
+  width: 70%;
+  margin: auto;
+  color: ghostwhite;
 }
 
 #userSearch{
@@ -144,4 +153,13 @@ font-size: 12px;
   left: 35%;
   top: 49px;
   z-index: 1;
+}
+
+.flex-stuff{
+  display: flex;
+}
+
+.flex-stuff2{
+  display: flex;
+  /* margin-left:300px */
 }
